<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="pl.wroc.edu.nadolny.firstlab.MainActivity">


        <TextView
            android:id="@+id/heightLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/give_height"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/heightMeasureLabel"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/heightLabel"
            android:layout_marginRight="10dp"
            android:paddingTop="15dp"
            android:text="@string/m_label"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/heightTxt"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/heightLabel"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_toLeftOf="@id/heightMeasureLabel"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/massLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/heightTxt"
            android:layout_marginTop="18dp"
            android:text="@string/give_mass"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/massTxt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/massLabel"
            android:layout_marginBottom="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="12dp"
            android:layout_toLeftOf="@+id/massMeasureLabel"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/massMeasureLabel"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/massLabel"
            android:layout_marginRight="10dp"
            android:paddingTop="15dp"
            android:text="@string/kg_label"
            android:textAlignment="center" />

        <Switch
            android:id="@+id/switchBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/massTxt"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/switch_label" />

        <Button
            android:id="@+id/countBMIBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/switchBtn"
            android:layout_centerVertical="true"
            android:text="@string/count_bmi" />

        <TextView
            android:id="@+id/returnTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/countBMIBtn"
            android:layout_marginTop="15dp"
            android:padding="30dp"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="32sp" />

    </RelativeLayout>

</ScrollView>